# easy_error

./: Cargo.toml  README.md
easy_error/: Cargo.toml
easy_error/examples/: usage_example.rs
easy_error/src/: lib.rs
easy_error_core/: Cargo.toml
easy_error_core/src/: lib.rs
easy_error_macros/: Cargo.toml
easy_error_macros/src/: lib.rs
easy_error_macros/tests/: trybuild_tests.rs
easy_error_macros/tests/compile-fail/: invalid_define_error.rs  invalid_define_error.stderr  invalid_try_easy.rs  invalid_try_easy.stderr
easy_error_macros/tests/compile-pass/: define_error.rs  try_easy.rs
