# easy_error_core/Cargo.toml

[package]
name = "easy_error_core"
version = "0.1.0"
edition = "2021"
description = "Core error type for easy_error"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mavin2009/easy_error"
homepage = "https://github.com/mavin2009/easy_error#readme"
documentation = "https://docs.rs/easy_error_core"

[dependencies]
